# lwext4-rust

./: .gitignore  ARCE_ERROR_ANALYSIS.md  CLAUDE.md  COVERAGE_TEST_REPORT.md  Cargo.toml  DIR_HTREE_IMPLEMENTATION_STATUS.md  DIR_IMPLEMENTATION_COMPARISON.md  FS_EXTENT_TRANSACTION_STATUS.md  IMPLEMENTATION_PROGRESS.md  Makefile  P0_FIX_RESULTS.md  README.md  REVISED_DESIGN_PRINCIPLES.md  SESSION_PROGRESS_SUMMARY.md  TODO  command-tips
docs/: README.md
docs/lwext4-core/: IMPLEMENTATION_PLAN.md  README.md  REFACTORING_STATUS.md  RUST_REDESIGN.md  TESTING_STRATEGY.md
docs/rust-implementation-migration/: COMPILATION_VS_FUNCTIONALITY.md  C_INTERFACE_NECESSITY_ANALYSIS.md  DOCUMENT_INDEX.md  README.md  RUST_IDIOMATIC_API_DESIGN.md
docs/rust-implementation-migration/step1-design-analysis/: C_TO_RUST_STRUCTURE_MAPPING.md  FINAL_IMPLEMENTATION_PLAN.md  INTERFACE_COMPATIBILITY_ANALYSIS.md  README.md  TWO_APPROACHES_COMPARISON.md  ZERO_MODIFICATION_FEASIBILITY.md
lwext4_arce/: Cargo.toml
lwext4_arce/src/: blockdev.rs  error.rs  fs.rs  lib.rs  ulibc.rs  util.rs
lwext4_arce/src/inode/: attr.rs  dir.rs  file.rs  mod.rs
lwext4_arce/tests/: integration_test.rs
lwext4_arce/tests/common/: mod.rs
lwext4_core/: Cargo.toml  HTREE_SPLIT_IMPLEMENTATION.md  HTREE_SPLIT_TEST_PLAN.md
lwext4_core/examples/: extent_demo.rs  htree_split_usage.rs
lwext4_core/src/: block.rs  consts.rs  dir.rs  error.rs  fs.rs  inode.rs  lib.rs  superblock.rs  traits.rs  types.rs
lwext4_core/src/balloc/: alloc.rs  checksum.rs  free.rs  (+1 more)
lwext4_core/tests/: extent_test.rs  integration_test.rs
(+40 files in other folders)
